--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/preset-react": "^7.25.9",
-    "@chromatic-com/storybook": "^2.0.2",
+    "@chromatic-com/storybook": "^3.2.2",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@storybook/addon-docs": "^8.3.4",
-    "@storybook/addon-essentials": "^8.3.4",
-    "@storybook/addon-interactions": "^8.3.4",
-    "@storybook/addon-links": "^8.3.4",
-    "@storybook/addon-onboarding": "^8.3.4",
-    "@storybook/blocks": "^8.3.4",
-    "@storybook/react": "^8.3.4",
-    "@storybook/react-vite": "^8.3.4",
-    "@storybook/test": "^8.3.4",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.21",
-    "chromatic": "^11.4.0",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "@storybook/addon-docs": "^8.4.2",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-links": "^8.4.2",
+    "@storybook/addon-onboarding": "^8.4.2",
+    "@storybook/blocks": "^8.4.2",
+    "@storybook/react": "^8.4.2",
+    "@storybook/react-vite": "^8.4.2",
+    "@storybook/test": "^8.4.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "chromatic": "^11.16.5",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^4.12.0",
+    "rollup": "^4.24.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.79.4",
+    "sass": "^1.80.6",
     "storybook": "^8.3.4",
-    "storybook-addon-theme-provider": "^0.2.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3"
+    "storybook-addon-theme-provider": "^0.2.6",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -53,12 +54,20 @@
   },
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.24.7",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@types/react-window": "^1.8.8",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.3",
     "classnames": "^2.5.1",
+    "date-fns-tz": "^3.2.0",
+    "jsencrypt": "^3.3.2",
+    "react-day-picker": "^9.2.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-window": "^1.8.10",
     "scss": "^0.2.4",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.3.0",
+    "yarn": "^1.22.22"
   }
 }
