--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/react-google-recaptcha": "^2.1.9",
     "chromatic": "^11.16.5",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,6 +46,7 @@
     "rollup-plugin-gzip": "^4.0.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.80.6",
     "storybook": "^8.4.5",
     "storybook-addon-theme-provider": "^0.2.6",
@@ -59,6 +61,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build": "tsc -b && rollup -c",
+    "analyze": "tsc -b && cross-env ANALYZE=true rollup -c",
     "sync": "git pull origin main && tsc -b && rollup -c",
     "chromatic": "chromatic --exit-zero-on-changes"
   },
@@ -74,6 +77,7 @@
     "date-fns": "^3.0.0",
     "date-fns-tz": "^3.2.0",
     "draft-js": "^0.11.7",
+    "janus-gateway": "^1.3.1",
     "js-beautify": "^1.15.1",
     "jsencrypt": "^3.3.2",
     "monaco-editor": "^0.52.2",
@@ -84,11 +88,13 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-window": "^1.8.10",
     "scheduler": "^0.19.0",
     "scss": "^0.2.4",
     "use-context-selector": "^2.0.0",
     "vite-plugin-svgr": "^4.3.0",
+    "webrtc-adapter": "^9.0.1",
     "yarn": "^1.22.22"
   },
   "files": [
